--- a/login-project/.gitignore
+++ b/login-project/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore a specific file
+secret.txt
+
+# Ignore all .env files (often used for environment variables)
+*.env
+
+# Ignore all files in a specific folder (e.g., a folder containing sensitive information)
+/secrets/
